k8s/openshift/01-service.yaml
apiVersion: v1
kind: Service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gitlab-bot
  sessionAffinity: None
  type: ClusterIP
